correção de textos e imagens como solicitado pelo Joel

--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -3,10 +3,13 @@
     <div class="texts">
       <span>G&R Soluções Agropecuárias</span>
       <h1>
-        <span>Soluções</span> e <br /> Consultoria para o <br /> <span>Produtor Rural</span>
+        <span>Crédito Rural,</span> Consórcio e<br />
+        Topografia: soluções estratégicas<br />
+        para o <span>Agronegócio.</span>
       </h1>
       <p>
-        Você quer aumentar a sua produtividade e <br /> melhorar a sua gestão rural?
+        Quer alavancar sua propriedade?  <br />
+        Entre em contato conosco.
       </p>
       <button class="btn btn-transp">
         Entrar em contato!
@@ -16,8 +19,8 @@
   <img class="home-img" src="assets/home-img.png" alt="">
   <div class="validations">
     <div>
-      <h4>+20k</h4>
-      <span>Produtores atendidos</span>
+      <h4>+3</h4>
+      <span>Bilhões de credito liberado</span>
     </div>
     <div>
       <h4>+10</h4>
@@ -27,13 +30,13 @@
 </section>
 <section id="what-we-do">
   <div class="container">
-    <img src="assets/what-we-do.png" alt="Duas mulheres sorridentes vendo um notebook, letras abaixo na imagem dizendo produtor rural">
+    <img src="assets/what-we-do.jpeg" alt="Duas mulheres sorridentes vendo um notebook, letras abaixo na imagem dizendo produtor rural">
     <div class="texts">
       <h2>O que fazemos:</h2>
       <p>
-        Na G&R Soluções Agropecuárias, conectamos tecnologia, expertise e cuidado para transformar desafios em oportunidades.
-        Oferecemos soluções completas para produtores rurais, desde crédito rural e regularização ambiental até topografia e drones agrícolas.
-        Nosso compromisso é simplificar processos, economizar tempo e garantir o crescimento sustentável do agronegócio.
+        Na G&R Soluções Agropecuárias, unimos conhecimento, estratégia e compromisso para impulsionar o agronegócio.
+        Oferecemos soluções completas em Crédito Rural, Consórcio, Topografia e Regularização Ambiental, ajudando produtores a acessarem recursos,
+        regularizarem suas propriedades e otimizarem suas operações. Nosso compromisso é fortalecer o agronegócio e contribuir para um desenvolvimento sustentável.
       </p>
       <button class="btn btn-transp">Entrar em contato!</button>
     </div>
@@ -55,7 +58,7 @@
     <div class="cards">
       <div class="card">
         <img src="assets/card-1.png" alt="">
-        <h4>Gerenciamento de imóveis rurais e urbanos</h4>
+        <h4>Georreferenciamento de imóveis rurais</h4>
         <p>Organizamos e regularizamos propriedades, garantindo conformidade com as normas legais.</p>
       </div>
       <div class="card">
